<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E68BD"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center"
                android:minWidth="200dp"
                android:text="@string/bienvenido"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/providerTextView"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center"
                android:minWidth="200dp"
                android:text="@string/proveedor"
                android:textColor="#E3F2FD" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_up_rem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="138dp"
                    android:layout_height="48dp"
                    android:backgroundTint="#2D4C8A"
                    android:gravity="center"
                    android:text="@string/upload" />

                <Space
                    android:id="@+id/space"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_remove"
                    android:layout_width="138dp"
                    android:layout_height="48dp"
                    android:backgroundTint="#2D4C8A"
                    android:text="@string/remove_all" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="361dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Images uploaded:"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:background="#7E96C8"
                android:elevation="20dp"
                android:minWidth="350dp"
                tools:ignore="MissingConstraints">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <Button
            android:id="@+id/button_caption"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#2D4C8A"
            android:insetLeft="120dp"
            android:insetTop="10dp"
            android:insetRight="120dp"
            android:text="Caption" />

        <Button
            android:id="@+id/button_sentiment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#2D4C8A"
            android:insetLeft="120dp"
            android:insetTop="10dp"
            android:insetRight="120dp"
            android:text="Prediction" />

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:height="0dp"
            android:backgroundTint="#2D4C8A"
            android:elegantTextHeight="false"
            android:gravity="center"
            android:text="@string/cerrar_sesi_n" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>